--- a/gallery.html
+++ b/gallery.html
@@ -108,11 +108,11 @@
             <center><h2>Rehearsal for the theatre – one of our favorite moments.</h2></center>
             <img src="images/rehearsal_pic.JPG" alt="Rehearsal scene">
             <center><h2>Painting the Backdrop – Adding Colors to the Stage</h2></center>
-            <img src="images/backdrop_paint.JPG" alt="Backdrop painting">
+            <img src="images/backdrop_paint.jpg" alt="Backdrop painting">
             <center><h2>Final Production – The Big Day on Stage</h2></center>
-            <img src="images/final_prod.JPG" alt="Production">
+            <img src="images/final_prod.jpg" alt="Production">
             <center><h2>After the Show – Our Class Picture</h2></center>
-            <img src="images/class_pic.JPG" alt="Class picture after the production">
+            <img src="images/class_pic.jpg" alt="Class picture after the production">
         </div>
     </div>
 </body>
